--- a/.gitignore
+++ b/.gitignore
@@ -159,5 +159,10 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+*.sqlite3
+
 # VSCode
 .vscode/
+
+# PyCharm
+.idea/
