--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,13 +1,14 @@
 version: '3.8'
 
 services:
-  web:
+  backend:
     build:
       context: ./backend
       dockerfile: Dockerfile.prod
     command: gunicorn backend.wsgi:application --bind 0.0.0.0:8000
     volumes:
-      - static_volume:/home/app/web/staticfiles
+      - static_volume:/home/hrxcelerate/backend/staticfiles
+      - media_volume:/home/hrxcelerate/backend/mediafiles
     expose:
       - 8000
     env_file:
@@ -16,11 +17,13 @@ services:
   nginx:
     build: ./nginx
     volumes:
-      - static_volume:/home/app/web/staticfiles
+      - static_volume:/home/hrxcelerate/backend/staticfiles
+      - media_volume:/home/hrxcelerate/backend/mediafiles
     ports:
       - 1337:80
     depends_on:
-      - web
+      - backend
 
 volumes:
   static_volume:
+  media_volume:
