--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,5 @@
 upstream backend {
-    server web:8000;
+    server backend:8000;
 }
 
 server {
@@ -11,10 +11,11 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
+        client_max_body_size 100M;
     }
 
     location /static/ {
-        alias /home/app/web/staticfiles/;
+        alias /home/hrxcelerate/backend/staticfiles/;
     }
 
 }
