Deleted .env files

--- a/.gitignore
+++ b/.gitignore
@@ -120,7 +120,7 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env
+.env*
 .venv
 env/
 venv/
@@ -168,3 +168,4 @@ cython_debug/
 .idea/
 
 backend/mediafiles/
+
