--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -1,28 +1,28 @@
-# pull official base image
+# PUll base image
 FROM python:3.11.4-slim-buster
 
-# set work directory
+# Set work directory
 WORKDIR /usr/src/backend
 
-# set environment variables
+# Set environment variables
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
-# install system dependencies
-# RUN apt-get update && apt-get install -y netcat
+# Install system dependencies
+RUN apt-get update && apt-get install -y netcat
 
-# install dependencies
+# Install Python dependencies
 RUN pip install --upgrade pip
 COPY ./requirements.txt .
 RUN pip install -r requirements.txt
 
-# copy entrypoint.sh
-COPY ./entrypoint.sh .
-RUN sed -i 's/\r$//g' /usr/src/backend/entrypoint.sh
-RUN chmod +x /usr/src/backend/entrypoint.sh
+# Copy entrypoint.dev.sh
+COPY ./entrypoint.dev.sh .
+RUN sed -i 's/\r$//g' /usr/src/backend/entrypoint.dev.sh
+RUN chmod +x /usr/src/backend/entrypoint.dev.sh
 
-# copy project
+# Copy project
 COPY . .
 
-# run entrypoint.sh
-ENTRYPOINT ["/usr/src/backend/entrypoint.sh"]
+# Run entrypoint.dev.sh
+ENTRYPOINT ["./entrypoint.dev.sh"]
