--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,7 +5,7 @@ djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 gunicorn==21.2.0
 packaging==23.1
-psycopg2==2.9.7
+psycopg2-binary==2.9.7
 PyJWT==2.8.0
 python-dotenv==1.0.0
 pytz==2023.3
