--- a/.github/workflows/deployment_hrx-api.yml
+++ b/.github/workflows/deployment_hrx-api.yml
@@ -13,6 +13,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    
+    defaults:
+      run:
+        working-directory: ./app
 
     steps:
       - uses: actions/checkout@v2
