--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.14.2",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.1",
+    "redux-logger": "^3.0.6",
     "sweetalert2": "^11.6.13",
     "web-vitals": "^2.1.4"
   },
