--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ Babel==2.12.1
 Brotli==1.0.9
 dj-database-url==2.0.0
 Django==4.2.4
+django-filter==23.2
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 gunicorn==21.2.0
