--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,19 +1,29 @@
 asgiref==3.7.2
 Babel==2.12.1
 Brotli==1.0.9
+certifi==2023.7.22
+charset-normalizer==3.2.0
+cloudinary==1.34.0
 dj-database-url==2.0.0
 Django==4.2.4
+django-cloudinary-storage==0.3.0
 django-filter==23.2
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
+drf-flex-fields==1.0.2
 gunicorn==21.2.0
+idna==3.4
 packaging==23.1
+Pillow==10.0.0
 psycopg2-binary==2.9.7
 PyJWT==2.8.0
 python-dotenv==1.0.0
 pytz==2023.3
 pyuca==1.2
+requests==2.31.0
+six==1.16.0
 sqlparse==0.4.4
 typing_extensions==4.7.1
 tzdata==2023.3
+urllib3==1.26.16
 whitenoise==6.5.0
