--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,7 @@ dj-database-url==2.0.0
 Django==4.2.4
 django-cloudinary-storage==0.3.0
 django-filter==23.2
+django-money==3.2.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 drf-flex-fields==1.0.2
@@ -16,6 +17,7 @@ idna==3.4
 packaging==23.1
 Pillow==10.0.0
 psycopg2-binary==2.9.7
+py-moneyed==3.0
 PyJWT==2.8.0
 python-dotenv==1.0.0
 pytz==2023.3
