--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,11 +7,17 @@ cloudinary==1.34.0
 dj-database-url==2.0.0
 Django==4.2.4
 django-cloudinary-storage==0.3.0
+django-cors-headers==4.2.0
+django-crispy-forms==2.0
+django-debug-toolbar==4.2.0
 django-filter==23.2
 django-money==3.2.0
+django-pdb==0.6.2
 djangorestframework==3.14.0
+djangorestframework-recursive==0.1.2
 djangorestframework-simplejwt==5.2.2
 drf-flex-fields==1.0.2
+drf-writable-nested==0.7.0
 gunicorn==21.2.0
 idna==3.4
 packaging==23.1
