--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,6 +14,7 @@ django-filter==23.2
 django-money==3.2.0
 django-pdb==0.6.2
 djangorestframework==3.14.0
+djangorestframework-camel-case==1.4.2
 djangorestframework-recursive==0.1.2
 djangorestframework-simplejwt==5.2.2
 drf-flex-fields==1.0.2
