--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,9 @@
     "@mui/icons-material": "^5.14.6",
     "@mui/material": "^5.14.6",
     "axios": "^1.4.0",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-auth-kit": "^2.12.6",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0"
   },
